--- a/app/src/main/res/layout/fragment_no_internet.xml
+++ b/app/src/main/res/layout/fragment_no_internet.xml
@@ -6,13 +6,30 @@
     tools:context=".NoInternetFragment">
 
     <!-- TODO: Update blank fragment layout -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:weightSum="2"
+        android:orientation="vertical"
+        android:layout_height="match_parent">
+
+    <ImageView
+        android:layout_gravity="center"
+        android:layout_marginTop="200dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_weight="0.1"
+        android:src="@drawable/baseline_error_black_24dp"/>
+
     <TextView
         android:id="@+id/noConnection"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:textAlignment="center"
         android:layout_gravity="center"
-        android:textSize="16dp"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_weight="1"
+        android:textSize="26dp"
+        android:textColor="@android:color/black"
+        android:text="No Internet Connection" />
+    </LinearLayout>
 
 </FrameLayout>
