--- a/app/src/main/res/layout/message_single_image_r.xml
+++ b/app/src/main/res/layout/message_single_image_r.xml
@@ -6,8 +6,6 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:padding="1dp"
-        android:background="@drawable/back_border"
         android:id="@+id/imageRecieved"
         android:layout_width="200dp"
         android:layout_height="150dp"
@@ -15,9 +13,25 @@
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
+        android:background="@drawable/back_border"
+        android:padding="1dp"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rDateImage"
         tools:srcCompat="@tools:sample/avatars" />
+
+    <TextView
+        android:id="@+id/rDateImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:text="TextView"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
