--- a/app/src/main/res/layout/message_single_image_s.xml
+++ b/app/src/main/res/layout/message_single_image_s.xml
@@ -30,6 +30,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="TextView"
+        android:gravity="center_horizontal"
+        android:textColor="@android:color/white"
+        android:background="@android:color/holo_orange_light"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
