--- a/app/src/main/res/layout/message_single_layout_r.xml
+++ b/app/src/main/res/layout/message_single_layout_r.xml
@@ -33,6 +33,9 @@
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:gravity="center_horizontal"
+        android:textColor="@android:color/white"
+        android:background="@android:color/holo_orange_light"
         android:text="TextView"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
