--- a/app/src/main/res/layout/message_single_layout_s.xml
+++ b/app/src/main/res/layout/message_single_layout_s.xml
@@ -26,7 +26,7 @@
 
     <TextView
         android:id="@+id/sDate"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
@@ -34,6 +34,9 @@
         android:layout_marginRight="8dp"
         android:text="TextView"
         android:visibility="gone"
+        android:textColor="@android:color/white"
+        android:background="@android:color/holo_orange_light"
+        android:gravity="center_horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
