--- a/app/src/main/res/layout/message_single_image_r.xml
+++ b/app/src/main/res/layout/message_single_image_r.xml
@@ -23,6 +23,7 @@
 
     <TextView
         android:id="@+id/rDateImage"
+        android:layout_marginTop="1dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -30,6 +31,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="TextView"
+        android:padding="5dp"
         android:gravity="center_horizontal"
         android:textColor="@android:color/white"
         android:background="@android:color/holo_orange_light"
