--- a/app/src/main/res/layout/message_single_image_s.xml
+++ b/app/src/main/res/layout/message_single_image_s.xml
@@ -32,6 +32,8 @@
         android:text="TextView"
         android:gravity="center_horizontal"
         android:textColor="@android:color/white"
+        android:padding="5dp"
+        android:layout_marginTop="1dp"
         android:background="@android:color/holo_orange_light"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
