--- a/app/src/main/res/layout/message_single_layout_r.xml
+++ b/app/src/main/res/layout/message_single_layout_r.xml
@@ -37,6 +37,7 @@
         android:textColor="@android:color/white"
         android:background="@android:color/holo_orange_light"
         android:text="TextView"
+        android:padding="5dp"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
