--- a/app/src/main/res/layout/message_single_layout_s.xml
+++ b/app/src/main/res/layout/message_single_layout_s.xml
@@ -33,7 +33,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="TextView"
+        android:layout_marginTop="1dp"
         android:visibility="gone"
+        android:padding="5dp"
         android:textColor="@android:color/white"
         android:background="@android:color/holo_orange_light"
         android:gravity="center_horizontal"
