--- a/app/src/main/res/layout/message_single_image_r.xml
+++ b/app/src/main/res/layout/message_single_image_r.xml
@@ -5,21 +5,30 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/imageRecieved"
-        android:layout_width="200dp"
-        android:layout_height="150dp"
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/back_border"
-        android:padding="1dp"
-        android:scaleType="fitXY"
+        android:minWidth="208dp"
+        android:background="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rDateImage"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/imageRecieved"
+            android:layout_width="200dp"
+            android:layout_height="150dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginBottom="4dp"
+
+            android:scaleType="fitXY"
+            tools:srcCompat="@tools:sample/avatars" />
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/rDateImage"
